--- a/appinfo.json
+++ b/appinfo.json
@@ -3,23 +3,27 @@
     "capabilities": [
         ""
     ],
-    "companyName": "kuzymanic@gmail.com",
-    "longName": "HelloWorld",
+    "companyName": "FNA",
+    "longName": "ALIEN Radar",
     "projectType": "native",
     "resources": {
         "media": [
             {
-                "file": "images/alien_background.png",
-                "name": "background",
-                "type": "png"
+                "file": "fonts/Bitwise.ttf",
+                "name": "FONT_BITWISE_16",
+                "type": "font"
             }
         ]
     },
     "sdkVersion": "3",
-    "shortName": "HelloWorld",
-    "uuid": "430d8d1f-1285-47ca-9500-f97dd5e5e730",
-    "versionLabel": "1.0",
+    "shortName": "ALIEN Radar",
+    "targetPlatforms": [
+        "aplite",
+        "basalt"
+    ],
+    "uuid": "98b3c80f-19a8-4aea-a992-be54a610d068",
+    "versionLabel": "1.1",
     "watchapp": {
-        "watchface": false
+        "watchface": true
     }
 }
